...
        
        private func addQRCodeOverlay() {
            let overlayView = UIView()
            overlayView.frame = view.layer.bounds
            overlayView.backgroundColor = UIColor.clear
            
            overlayView.accessibilityIdentifier = "QRCodeOverlay"

            // Create a transparent cutout for the QR code area
            let maskLayer = CAShapeLayer()
            let path = UIBezierPath(rect: overlayView.bounds)
            let qrCodeRectSize: CGFloat = min(view.frame.width, view.frame.height) * 0.7
            let qrCodeRect = CGRect(x: (view.frame.width - qrCodeRectSize) / 2,
...
    @Binding var isPresented: Bool
    let codeTypes: [AVMetadataObject.ObjectType]
    let completion: (Result<String, AuthCodeScannerView.ScanError>) -> Void
    
    var body: some View {
        NavigationView {
            AuthCodeScannerView(codeTypes: codeTypes, completion: completion)
                .navigationTitle("Scanning")
                .navigationBarTitleDisplayMode(.inline)
                .toolbar {
                    ToolbarItem(placement: .cancellationAction) {
                        Button("Cancel") {
                            isPresented = false
...
